# clicker

./: .gitignore  README.md  clicker.sql
backend/: CMakeLists.txt
backend/.cache/clangd/index/: DatabaseHandler.cpp.D50784936E869F4C.idx  DatabaseHandler.hpp.E987A54F3723DA94.idx  Server.cpp.B533F59B59A69746.idx  Server.hpp.3F649997D11B2B88.idx  SessionManager.cpp.412C5BB8DEB0312F.idx  SessionManager.hpp.0838B562E1897D35.idx  base.h.46A78C1811D8E29E.idx  bcrypt.cpp.40C72B57CEB10B7F.idx  bcrypt.h.0E364D757462C148.idx  blowfish.cpp.D0322D978108E543.idx  build_config.h.34A38D51C89251AD.idx  callback.h.100309A573778E62.idx  config.h.5AB8E4C02F4CB3DD.idx  connection.h.96DD1D2430687421.idx  datatype.h.37D4D1FC282EB9B1.idx  defaults.h.AA932BBCF9B51CE4.idx  driver.h.045C6C09350FCCF6.idx  exception.h.B91114AB6200DC2A.idx  jwt.h.35BFDB15345AFC43.idx  main.cpp.2C66548A8E1E90E3.idx  node_blf.h.A914B761FE05EC93.idx  openbsd.h.B169DE9411BF8105.idx  prepared_statement.h.F6457CBE47984911.idx  resultset.h.B735B2DD8BBB460D.idx  resultset_metadata.h.CF665F6E806AAFFD.idx  sqlstring.h.AF6C63F85B5FFE8E.idx  statement.h.FF51802879A1DBD8.idx  traits.h.12AD475BCB18F563.idx  variant.h.80CAB7ABC86965A5.idx  (+1 more)
backend/include/jwt-cpp/: jwt.h
backend/include/klewy/: ConnectionPool.hpp  DatabaseHandler.hpp  Server.hpp  SessionManager.hpp
backend/src/: ConnectionPool.cpp  DatabaseHandler.cpp  Server.cpp  SessionManager.cpp  bcrypt.cpp  main.cpp
backend/src/filters/: JwtFilter.cpp
backend/src/handlers/: AuthHandler.cpp  Game.cpp
backend/src/utils/: bcrypt.cpp  blowfish.cpp  utils.cpp
(+30 files in other folders)
